--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-brands-svg-icons": "^6.5.2",
+        "@fortawesome/free-regular-svg-icons": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "algoliasearch": "^4.9.1",
         "apollo-client": "^2.6.10",
         "axios": "^0.21.1",
