--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,37 @@
-
-  {
+{
     "name": "backend",
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "mongoose": "^5.12.13",
-      "jsonwebtoken": "^8.5.1",
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "dotenv": "^10.0.0",
-      "stripe": "^8.151.0",
-      "paypal-rest-sdk": "^1.8.1",
-      "algoliasearch": "^4.9.1",
-      "graphql": "^15.5.0",
-      "apollo-server-express": "^2.25.2",
-      "firebase-admin": "^9.10.0"
+        "algoliasearch": "^4.9.1",
+        "apollo-server-express": "^2.25.2",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.2",
+        "bull": "^4.12.9",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "csurf": "^1.11.0",
+        "dotenv": "^10.0.0",
+        "express": "^4.19.2",
+        "express-rate-limit": "^7.3.0",
+        "firebase-admin": "^9.10.0",
+        "graphql": "^15.5.0",
+        "helmet": "^7.1.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.12.13",
+        "nodemailer": "^6.6.1",
+        "paypal-rest-sdk": "^1.8.1",
+        "react-input-mask": "^2.0.4",
+        "redis": "^4.6.14",
+        "stripe": "^8.151.0",
+        "systeminformation": "^5.22.10"
     },
     "devDependencies": {
-      "nodemon": "^2.0.7",
-      "eslint": "7.32.0"
+        "eslint": "7.32.0",
+        "nodemon": "^2.0.7"
     }
-  }
-  
+}
