--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@coreui/coreui": "^5.0.2",
+        "@coreui/icons": "^3.0.1",
+        "@coreui/react": "^5.1.0",
+        "@coreui/react-chartjs": "^3.0.0",
+        "@coreui/react-pro": "^5.2.0",
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-brands-svg-icons": "^6.5.2",
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
@@ -17,20 +22,29 @@
         "algoliasearch": "^4.9.1",
         "apollo-client": "^2.6.10",
         "axios": "^0.21.1",
+        "body-parser": "^1.20.2",
+        "bull": "^4.12.9",
+        "cookie-parser": "^1.4.6",
+        "csurf": "^1.11.0",
+        "express-rate-limit": "^7.3.0",
         "firebase": "^8.6.8",
         "graphql": "^15.5.0",
+        "helmet": "^7.1.0",
         "next": "latest",
         "next-auth": "^3.27.2",
         "react": "latest",
         "react-dom": "latest",
         "react-icons": "^5.2.1",
+        "react-input-mask": "^2.0.4",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-slick": "^0.30.2",
+        "react-toastify": "^10.0.5",
+        "redis": "^4.6.14",
         "redux": "^4.1.0",
         "redux-thunk": "^2.3.0",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^5.3.0"
+        "styled-components": "^5.3.11"
     },
     "devDependencies": {
         "eslint": "7.32.0",
