--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
         "react-dom": "latest",
         "react-icons": "^5.2.1",
         "react-input-mask": "^2.0.4",
+        "react-modal": "^3.16.1",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-slick": "^0.30.2",
