--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
         "dotenv": "^10.0.0",
         "express": "^4.19.2",
         "express-rate-limit": "^7.3.0",
+        "express-session": "^1.18.0",
         "firebase-admin": "^9.10.0",
         "graphql": "^15.5.0",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^8.5.1",
+        "jwt-decode": "^4.0.0",
         "mongoose": "^5.12.13",
         "nodemailer": "^6.6.1",
         "paypal-rest-sdk": "^1.8.1",
