--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: '3'
 services:
+  mongo:
+    image: mongo:latest
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
   frontend:
     build: ./frontend
     ports:
@@ -15,7 +23,14 @@ services:
     build: ./backend
     ports:
       - "5000:5000"
+    environment:
+      MONGO_URI: mongodb://mongo:27017/mongodb
+    depends_on:
+      - mongo
     volumes:
       - ./backend:/app
       - /app/node_modules
     command: nodemon --watch . server.js
+
+volumes:
+  mongo-data:
