--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
         "firebase": "^8.6.8",
         "graphql": "^15.5.0",
         "helmet": "^7.1.0",
+        "jwt-decode": "^4.0.0",
         "next": "latest",
         "next-auth": "^3.27.2",
         "react": "latest",
