--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,10 @@
         "styled-components": "^5.3.11"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.19",
         "eslint": "7.32.0",
-        "eslint-config-next": "latest"
+        "eslint-config-next": "latest",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.4"
     }
 }
